--- a/style.css
+++ b/style.css
@@ -108,8 +108,7 @@ body	{margin: 0;
 .box1{
 	float: left;
 	width: 20%;
-	padding-top: 110px;
-	padding-bottom: 110px;
+	height: 220px;
 	margin-left: 4%;
 	margin-right: 4%;
 	background: #D6D5D5;
@@ -197,10 +196,14 @@ body	{margin: 0;
 }
 
 .cr{
-  color: #ffffff;
-  font-size: 15px;
-  padding-top: 60px;
-  padding-left : 70%;
+ 	color: #ffffff;
+	font-size: 15px;
+	padding-top: 60px;
+	padding-left : 70%;
+}
 
-
+.hover{
+	height: 100%;
+	width: 100%;
+	z-index: 1;
 }
