--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 @charset "UTF-8";
 
-body	{margin: 0;
+body{
+	margin: 0;
 	font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif;
-	}
+}
 
 .head{
 	background-color: #FF5050
 }
+
 .head:after{
 	content: "";
 	display: block;
@@ -17,6 +19,7 @@ body	{margin: 0;
 	float: left;
 	width:50%;
 }
+
 .topnavbox{
 	float: left;
 	width: 43%;
@@ -29,6 +32,7 @@ body	{margin: 0;
 	text-align: center;
 	margin-right: 20px
 }
+
 .topengbox:hover{
 	opacity: 0.8
 }
@@ -81,6 +85,7 @@ body	{margin: 0;
 .topicbox{
 	padding-top: 10px
 }
+
 .topic{
 	background-color: #EBEBEB;
 	font-size: 35px;
@@ -99,12 +104,18 @@ body	{margin: 0;
 	width:90%;
 }
 
-
 .boxA:after{
 	content:"";
 	display: block;
 	clear: both;
 }
+
+.boxB:after{
+	content:"";
+	display: block;
+	clear: both;
+}
+
 .box1{
 	float: left;
 	width: 20%;
@@ -112,8 +123,8 @@ body	{margin: 0;
 	margin-left: 4%;
 	margin-right: 4%;
 	background: #D6D5D5;
-
 }
+
 .box2{
 	float: left;
 	width: 20%;
@@ -122,6 +133,7 @@ body	{margin: 0;
 	margin-right: 4%;
 	background: #D6D5D5;
 }
+
 .box3{
 	float: left;
 	width: 20%;
@@ -130,6 +142,7 @@ body	{margin: 0;
 	margin-right: 4%;
 	background: #D6D5D5;
 }
+
 .box4{
 	float: left;
 	width: 20%;
@@ -139,11 +152,6 @@ body	{margin: 0;
 	background: #D6D5D5;
 }
 
-.boxB:after{
-	content:"";
-	display: block;
-	clear: both;
-}
 .box5{
 	float: left;
 	width: 20%;
@@ -154,6 +162,7 @@ body	{margin: 0;
 	background: #D6D5D5;
 
 }
+
 .box6{
 	float: left;
 	width: 20%;
@@ -162,6 +171,7 @@ body	{margin: 0;
 	margin-right: 4%;
 	background: #D6D5D5;
 }
+
 .box7{
 	float: left;
 	width: 20%;
@@ -170,6 +180,7 @@ body	{margin: 0;
 	margin-right: 4%;
 	background: #D6D5D5;
 }
+
 .box8{
 	float: left;
 	width: 20%;
@@ -179,15 +190,11 @@ body	{margin: 0;
 	background: #D6D5D5;
 }
 
-
-
-
 .sitekousei{
 	width: 100%;
 	height:500px;
 	background-color: #F3675F;
 }
-
 
 .footer{
 	background: #656565;
