--- a/style.css
+++ b/style.css
@@ -116,78 +116,15 @@ body{
 	clear: both;
 }
 
-.box1{
+.box{
+	position: relative;
 	float: left;
-	width: 20%;
+	width: 220px;
 	height: 220px;
 	margin-left: 4%;
 	margin-right: 4%;
 	background: #D6D5D5;
-}
-
-.box2{
-	float: left;
-	width: 20%;
-	padding-top: 110px;
-	padding-bottom: 110px;
-	margin-right: 4%;
-	background: #D6D5D5;
-}
-
-.box3{
-	float: left;
-	width: 20%;
-	padding-top: 110px;
-	padding-bottom: 110px;
-	margin-right: 4%;
-	background: #D6D5D5;
-}
-
-.box4{
-	float: left;
-	width: 20%;
-	padding-top: 110px;
-	padding-bottom: 110px;
-	margin-right: 4%;
-	background: #D6D5D5;
-}
-
-.box5{
-	float: left;
-	width: 20%;
-	padding-top: 110px;
-	padding-bottom: 110px;
-	margin-left: 4%;
-	margin-right: 4%;
-	background: #D6D5D5;
-
-}
-
-.box6{
-	float: left;
-	width: 20%;
-	padding-top: 110px;
-	padding-bottom: 110px;
-	margin-right: 4%;
-	background: #D6D5D5;
-}
-
-.box7{
-	float: left;
-	width: 20%;
-	padding-top: 110px;
-	padding-bottom: 110px;
-	margin-right: 4%;
-	background: #D6D5D5;
-}
-
-.box8{
-	float: left;
-	width: 20%;
-	padding-top: 110px;
-	padding-bottom: 110px;
-	margin-right: 4%;
-	background: #D6D5D5;
+	overflow: hidden;
 }
 
 .sitekousei{
@@ -209,9 +146,13 @@ body{
 	padding-left : 70%;
 }
 
-.hover{
-	display: none;
-	height: 100%;
-	width: 100%;
+#hover1, #hover2, #hover3, #hover4, #hover5, #hover6, #hover7, #hover8{
+	background-color: blue;
+	position: absolute;
+	height: 220px;
+	width: 220px;
 	z-index: 1;
+	opacity: 0.8;
+	top: -220px;
+	left: 0px;
 }
