--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body{
 	font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif;
 }
 
+/* common */
+
 .head{
 	background-color: #FF5050
 }
@@ -15,22 +17,41 @@ body{
 	clear: both;
 }
 
+.footer{
+	background: #656565;
+	width: 100%;
+	height: 100px;
+}
+
+.cr{
+ 	color: #ffffff;
+	font-size: 15px;
+	padding-top: 60px;
+	padding-left : 70%;
+}
+
+/* index */
+
 .topiconbox{
 	float: left;
-	width:50%;
+	width: 50%;
 }
 
 .topnavbox{
 	float: left;
-	width: 43%;
+	width: auto;
+	margin-top: 65px;
 }
 
 .topengbox{
-	float:right;
-	width:7%;
-	border: solid 3px #ffffff;
+	float: right;
+	width: auto;
+	border: solid 2px #ffffff;
 	text-align: center;
-	margin-right: 20px
+	padding-left: 3px;
+	padding-right: 3px;
+	margin-right: 20px;
+	margin-top: 40px;
 }
 
 .topengbox:hover{
@@ -82,8 +103,13 @@ body{
 	text-decoration: none;
 }
 
+.slide{
+	width: 100%;
+	padding-top: 7px;
+}
+
 .topicbox{
-	padding-top: 10px
+	padding-top: 8px;
 }
 
 .topic{
@@ -91,14 +117,14 @@ body{
 	font-size: 35px;
 	width: 100%;
 	padding-top: 10px;
-	padding-bottom: 0px;
 	color: #5E5E5E;
 }
 
 .boxA{
-	padding-top: 20px;
-	width:90%;
+	padding-top: 10px;
+	width: 90%;
 }
+
 .boxB{
 	padding-top: 40px;
 	width:90%;
@@ -119,31 +145,15 @@ body{
 .box{
 	position: relative;
 	float: left;
-	width: 220px;
-	height: 220px;
-	margin-left: 4%;
-	margin-right: 4%;
+	width: 20%;
+	margin-left: 2.5%;
+	margin-right: 2.5%;
 	background: #D6D5D5;
 	overflow: hidden;
 }
 
-.sitekousei{
-	width: 100%;
-	height:500px;
-	background-color: #F3675F;
-}
-
-.footer{
-	background: #656565;
-	width: 100%;
-	height: 100px;
-}
-
-.cr{
- 	color: #ffffff;
-	font-size: 15px;
-	padding-top: 60px;
-	padding-left : 70%;
+.boximg{
+	overflow: hidden;
 }
 
 #hover1, #hover2, #hover3, #hover4, #hover5, #hover6, #hover7, #hover8{
@@ -155,4 +165,56 @@ body{
 	opacity: 0.8;
 	top: -220px;
 	left: 0px;
+}
+
+.morebox{
+	width: 120px;
+	border: 1px solid #929292;
+	background: transparent;
+}
+
+.morebox:hover{
+	opacity: 0.8;
+}
+
+.morebox a{
+	color: #929292;
+	text-align: center;
+	text-decoration: none;
+	font-size:28px;
+}
+
+.sitekousei{
+	width: 100%;
+	height: 500px;
+	background-color: #F3675F;
+}
+
+/* info */
+
+.systems{
+	position: relative;
+	padding-top: 0px;
+}
+
+.ie, .me, .sa, .gc {
+	position: absolute;
+	opacity: 0.0;
+}
+
+.active {
+	right: 5%;
+	left: 5%;
+	opacity: 1.0;
+}
+
+.ieb, .meb, .sab, .gcb {
+	height: 100%;
+	width: 15%;
+	cursor: pointer;
+}
+
+.buttonsy{
+	width: 30%;
+	padding-bottom: 0;
 }
