--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body{
 	margin: 0;
 	font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif;
+	width: 100%;
 }
 
 /* common */
@@ -285,17 +286,19 @@ body{
 	opacity: 0.8;
 }
 
+.letsgobox{
+	width: 80%;
+	border: 15px solid #00A2FF;
+}
 
 .letsgo{
-	width:100%;
-	border: 15px solid #00A2FF;
+	width: 100%;
 	color: #929292;
 	text-align: center;
 	text-decoration: none;
-	font-size:100px;
+	font-size: 7vw;
+	display: block;
 }
-
-
 
 
 .sitekousei{
