Internet Securityとは何かの記事作成

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body{
 	margin: 0;
 	font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif;
+	width: 100%;
 }
 
 /* common */
@@ -31,12 +32,38 @@ body{
 }
 
 .totop{
+	display: block;
+	width: 100px;
+	left: 50%;
+	bottom: 0;
+	position: fixed;
+	z-index: 1;
+	margin-left: -50px;
+}
 
+.totop img{
+	width: 100px;
+}
+
+.pagebox{
+	width:80%;
+}
+
+.pagetop{
+	font-size: 45px;
+	color: #5E5E5E;
+	text-align: left;
+	border-bottom: solid 1px black;
+}
+
+.pagearticlebox{
+	width:80%;
+	font-size:22.5px;
+	color: #5E5E5E;
+	text-align: left;
 }
 
 /* index */
-
-
 
 .topiconbox{
 	float: left;
@@ -162,113 +189,114 @@ body{
 	overflow: hidden;
 }
 
-
-
 #hover1{
 	background-color: #FF644E;
 	position: absolute;
-	height: 220px;
-	width: 220px;
 	z-index: 1;
 	opacity: 0.8;
-	top: -220px;
-	left: 0px;
+	overflow: hidden;
 }
 
 #hover2{
 	background-color: #16E7CF;
 	position: absolute;
-	height: 220px;
-	width: 220px;
 	z-index: 1;
 	opacity: 0.8;
-	top: -220px;
-	left: 0px;
+	overflow: hidden;
 }
 
 #hover3{
 	background-color: #61D836;
 	position: absolute;
-	height: 220px;
-	width: 220px;
 	z-index: 1;
 	opacity: 0.8;
-	top: -220px;
-	left: 0px;
+	overflow: hidden;
 }
 
 #hover4{
 	background-color: #00A2FF;
 	position: absolute;
-	height: 220px;
-	width: 220px;
 	z-index: 1;
 	opacity: 0.8;
-	top: -220px;
-	left: 0px;
+	overflow: hidden;
 }
 
 #hover5{
 	background-color: #EF5FA7;
 	position: absolute;
-	height: 220px;
-	width: 220px;
 	z-index: 1;
 	opacity: 0.8;
-	top: -220px;
-	left: 0px;
+	overflow: hidden;
 }
 
 #hover6{
 	background-color: #FAE232;
 	position: absolute;
-	height: 220px;
-	width: 220px;
 	z-index: 1;
 	opacity: 0.8;
-	top: -220px;
-	left: 0px;
+	overflow: hidden;
 }
 
 #hover7{
 	background-color: #FF9300;
 	position: absolute;
-	height: 220px;
-	width: 220px;
 	z-index: 1;
 	opacity: 0.8;
-	top: -220px;
-	left: 0px;
+	overflow: hidden;
 }
 
 #hover8{
 	background-color: #FF644E;
 	position: absolute;
-	height: 220px;
-	width: 220px;
 	z-index: 1;
 	opacity: 0.8;
-	top: -220px;
-	left: 0px;
+	overflow: hidden;
 }
 
 
 #hover1 p,#hover2 p,#hover3 p,#hover4 p,#hover5 p,#hover6 p,#hover7 p,#hover8 p{
 	color: #ffffff;
-	font-size: 45px
+	font-size: 3vw;
 }
 
-
-
-#hover1 p1,#hover2 p1,#hover4 p1,#hover5 p1,#hover6 p1,#hover7 p1,#hover8 p1{
+#hover1 p1{
 	color: #ffffff;
-	font-size: 20px
+	font-size: 1.4vw;
+}
+
+#hover2 p1{
+	color: #ffffff;
+	font-size: 1.7vw;
 }
 
 #hover3 p1{
 	color: #ffffff;
-	font-size: 19px
+	font-size: 1.3vw;
+}
 
+#hover4 p1{
+	color: #ffffff;
+	font-size: 1.7vw;
+}
+
+#hover5 p1{
+	color: #ffffff;
+	font-size: 1.7vw;
+}
+
+#hover6 p1{
+	color: #ffffff;
+	font-size: 1.5vw;
+}
+
+#hover7 p1{
+	color: #ffffff;
+	font-size: 1.7vw;
+}
+
+#hover8 p1{
+	color: #ffffff;
+	font-size: 1.7vw;
 }
 
 .more{
@@ -278,25 +306,43 @@ body{
 	color: #929292;
 	text-align: center;
 	text-decoration: none;
-	font-size:28px;
+	font-size: 28px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 .more:hover{
 	opacity: 0.8;
 }
 
+.foryou{
+	font-size: 30px;
+	color: #5E5E5E;
+	padding-top: 5px;
+}
+
+.letsgobox{
+	width: 80%;
+	border: 15px solid #00A2FF;
+}
 
 .letsgo{
-	width:100%;
-	border: 15px solid #00A2FF;
+	width: 100%;
 	color: #929292;
 	text-align: center;
 	text-decoration: none;
-	font-size:100px;
+	font-size: 7vw;
+	display: block;
+	transition: 0.3s;
 }
 
-
-
+.letsgo:hover{
+	background-color: #00A2FF;
+	color: white;
+	transition: 0.3s;
+}
 
 .sitekousei{
 	width: 100%;
@@ -308,7 +354,7 @@ body{
 
 .systems{
 	position: relative;
-	padding-top: 0px;
+	padding-top: 0;
 }
 
 .ie, .me, .sa, .gc {
