--- a/style.css
+++ b/style.css
@@ -448,3 +448,26 @@ body {
 	background-color: #FF5050;
 	float: left;
 }
+
+.matomebox {
+	border: 4px solid #00A2FF;
+	overflow: hidden;
+	width: 100%;
+	margin: 0 auto;
+	text-align: left;
+}
+
+.matome {
+	font-size: 25px;
+	float: left;
+	padding-top: 15px;
+	padding-bottom: 10px;
+	color: #5E5E5E;
+}
+
+.matometitle {
+	font-size: 25px;
+	color: white;
+	background-color: #00A2FF;
+	float: left;
+}
