--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ body {
 
 .matomebox {
 	border: 4px solid #00A2FF;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	width: 100%;
 	margin: 0 auto;
 	text-align: left;
@@ -459,7 +459,7 @@ body {
 
 .matome {
 	font-size: 25px;
-	float: left;
+	text-align: left;
 	padding-top: 15px;
 	padding-bottom: 10px;
 	color: #5E5E5E;
