--- a/style.css
+++ b/style.css
@@ -438,9 +438,15 @@ body {
 }
 .ankemoji1 {
 	font-size: 15px;
-	float: left;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	text-align: left;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.ankemoji2 {
+	font-size: 10px;
+	text-align: right;
+	padding-top: 0px;
+	padding-bottom: 5px;
 }
 .ankejissi {
 	font-size: 20px;
