サイトマップの線を途中まで追加

--- a/style.css
+++ b/style.css
@@ -410,16 +410,16 @@ body {
 	margin: 0 auto;
 	width: 55%
 }
-#one::after {
+/*#one::after {
 	position: relative;
 	content: "";
 	background-color: #5E5E5E;
 	width: 1px;
 	height: 588px;
 	top: -2px;
-	left: 50%;
+	left: 100%;
 	display: inline-block;
-}
+}*/
 /*.more:after {
 	position: relative;
 	content: "";
