--- a/style.css
+++ b/style.css
@@ -491,3 +491,24 @@ body {
 	background-color: #00A2FF;
 	float: left;
 }
+
+.nextpage {
+	width: 20%;
+	border: 2px solid #FF5050;
+	background: transparent;
+	color: #5E5E5E;
+	text-align: center;
+	text-decoration: none;
+	font-size: 17px;
+	padding-left: auto;
+	padding-right: auto;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	display: inline-block; 
+}
+
+.nextpage:hover {
+	background-color: rgba(255,80,80,0.75);
+	color: white;
+	transition: 0.2s;
+}
