--- a/style.css
+++ b/style.css
@@ -9,13 +9,15 @@ body {
 /* common */
 
 .head {
-	background-color: #FF5050
+	background-color: #FF5050;
 }
 .head:after {
 	content: "";
 	display: block;
 	clear: both;
 }
+
+
 .footer {
 	background: #656565;
 	width: 100%;
@@ -47,36 +49,36 @@ body {
 	width: 80%;
 }
 .pagetop {
-	font-size: 45px;
+	font-size: 3.15vw;
 	color: #5E5E5E;
 	text-align: left;
 	border-bottom: solid 1px black;
 }
 .pagearticlebox {
 	width: 80%;
-	font-size: 22px;
+	font-size: 1.5vw;
 	color: #5E5E5E;
 	text-align: left;
 }
 .pagearticlebox2 {
 	width: 90%;
-	font-size: 22px;
+	font-size: 1.5vw;
 	color: #5E5E5E;
 	text-align: left;
 }
 .pagetop2 {
-	font-size: 38px;
+	font-size: 2.63vw;
 	color: #5E5E5E;
 	text-align: left;
 	border-bottom: solid 1px black;
 }
 .pro {
-	font-size: 30px;
+	font-size: 2.05vw;
 	color: #5E5E5E;
 	text-align: left;
 }
 .pro2 {
-	font-size: 25px;
+	font-size: 1.73vw;
 	color: #5E5E5E;
 	text-align: left;
 }
@@ -105,14 +107,6 @@ body {
 .topengbox:hover {
 	opacity: 0.8
 }
-.topicon h1 a {
-	color: #ffffff;
-	text-decoration: none;
-}
-.topicon h1 {
-	margin: 0;
-	font-size: 30px;
-}
 .topnav ul {
 	margin: 0;
 	padding: 0;
@@ -122,7 +116,7 @@ body {
 	display: block;
 	padding: 5px;
 	color: #ffffff;
-	font-size: 22px;
+	font-size: 1.5vw;
 	text-decoration: none;
 }
 .topnav li a:hover {
@@ -139,7 +133,7 @@ body {
 }
 .topeng {
 	color: #ffffff;
-	font-size: 25px;
+	font-size: 1.7vw;
 	text-decoration: none;
 }
 .slide {
@@ -152,14 +146,14 @@ body {
 .topic {
 	background-color: #EBEBEB;
 	width: 100%;
-	padding-top: 10px;
+	padding-top: 0.7vw;
 }
 .topiceng {
-	font-size: 35px;
+	font-size: 2.45vw;
 	color: #5E5E5E;
 }
 .topicjpn {
-	font-size: 15px;
+	font-size: 1vw;
 	color: #5E5E5E;
 }
 .boxA {
@@ -286,13 +280,13 @@ body {
 }
 
 .foryou {
-	font-size: 30px;
+	font-size: 2.1vw;
 	color: #5E5E5E;
 	padding-top: 5px;
 }
 .letsgobox {
 	width: 80%;
-	border: 15px solid #00A2FF;
+	border: 1.05vw solid #00A2FF;
 }
 .letsgo {
 	width: 100%;
@@ -332,6 +326,7 @@ body {
 	float: left;
 }
 .siteboxall {
+	font-size: 1.05vw;
 	margin: 0 auto;
 	width: 80%
 }
@@ -378,12 +373,12 @@ body {
 	color: #929292;
 	text-align: center;
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 1.4vw;
 	padding-left: auto;
 	padding-right: auto;
 	padding-top: 13px;
 	padding-bottom: 13px;
-	display: inline-block; 
+	display: inline-block;
 }
 .more:hover {
 	background-color: rgba(255,80,80,0.75);
@@ -399,7 +394,7 @@ body {
 	color: #929292;
 	text-align: center;
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 1.4vw;
 	padding-left: auto;
 	padding-right: auto;
 	padding-top: 8px;
@@ -451,26 +446,26 @@ body {
 	padding-top: 15px
 }
 .ankemoji1 {
-	font-size: 15px;
+	font-size: 1.05vw;
 	text-align: left;
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
 .ankemoji2 {
-	font-size: 10px;
+	font-size: 0.7vw;
 	text-align: right;
 	padding-top: 0px;
 	padding-bottom: 5px;
 }
 .ankejissi {
-	font-size: 20px;
+	font-size: 1.4vw;
 	color: white;
 	background-color: #FF5050;
 	float: left;
 }
 
 .matomebox {
-	border: 4px solid #00A2FF;
+	border: 0.28vw solid #00A2FF;
 	/*overflow: hidden;*/
 	width: 100%;
 	margin: 0 auto;
@@ -478,7 +473,7 @@ body {
 }
 
 .matome {
-	font-size: 25px;
+	font-size: 1.75vw;
 	text-align: left;
 	padding-top: 15px;
 	padding-bottom: 10px;
@@ -486,25 +481,25 @@ body {
 }
 
 .matometitle {
-	font-size: 25px;
+	font-size: 1.75vw;
 	color: white;
 	background-color: #00A2FF;
 	float: left;
 }
 
 .nextpage {
-	width: 16%;
+	width: 20%;
 	border: 2px solid #FF5050;
 	background: transparent;
 	color: #5E5E5E;
 	text-align: center;
 	text-decoration: none;
-	font-size: 17px;
+	font-size: 1.2vw;
 	padding-left: auto;
 	padding-right: auto;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	display: inline-block; 
+	display: inline-block;
 }
 
 .nextpage:hover {
@@ -514,6 +509,6 @@ body {
 }
 
 .welcome {
-	font-size: 25px;
+	font-size: 1.7vw;
 	color: #5E5E5E;
 }
